[metadata]
name = co2mini
version = 0.3.0
author = Jeremy Mayeres
author_email = jeremy@jerr.dev
description = Monitor CO2 levels with Prometheus and/or HomeKit
url = https://github.com/jerr0328/co2-mini
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires = prometheus_client
python_requires = >=3.7

[options.entry_points]
console_scripts = co2mini = co2mini.main:main

[options.extras_require]
homekit = HAP-python
